--- a/hellowindow.ui
+++ b/hellowindow.ui
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
+      <y>10</y>
       <width>256</width>
-      <height>361</height>
+      <height>381</height>
      </rect>
     </property>
    </widget>
@@ -28,9 +28,9 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>30</y>
+      <y>10</y>
       <width>321</width>
-      <height>361</height>
+      <height>381</height>
      </rect>
     </property>
    </widget>
@@ -59,6 +59,7 @@
      <string>&amp;Help</string>
     </property>
     <addaction name="action_Help"/>
+    <addaction name="action_About"/>
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Help"/>
@@ -108,6 +109,11 @@
    </property>
    <property name="shortcut">
     <string>F1</string>
+   </property>
+  </action>
+  <action name="action_About">
+   <property name="text">
+    <string>&amp;About</string>
    </property>
   </action>
  </widget>
