--- a/deb_qview.ui
+++ b/deb_qview.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>HelloWindow</class>
- <widget class="QMainWindow" name="HelloWindow">
+ <class>deb_qview</class>
+ <widget class="QMainWindow" name="deb_qview">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -10,29 +10,42 @@
     <height>436</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
-   <string>HelloWindow</string>
+   <string>deb-qview</string>
+  </property>
+  <property name="windowOpacity">
+   <double>-1.000000000000000</double>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QTreeView" name="treeView">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <widget class="QWidget" name="formLayoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>256</width>
-      <height>381</height>
+      <width>611</width>
+      <height>351</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QTextBrowser" name="contentviewer">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>10</y>
-      <width>321</width>
-      <height>381</height>
-     </rect>
-    </property>
+    <layout class="QFormLayout" name="formLayout">
+     <item row="1" column="1">
+      <widget class="QTextBrowser" name="contentviewer"/>
+     </item>
+     <item row="0" column="1">
+      <widget class="QTreeView" name="treeView"/>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
@@ -75,8 +88,11 @@
     <bool>false</bool>
    </attribute>
    <addaction name="action_New"/>
+   <addaction name="separator"/>
    <addaction name="action_Open"/>
+   <addaction name="separator"/>
    <addaction name="action_Close"/>
+   <addaction name="separator"/>
    <addaction name="action_Help"/>
   </widget>
   <action name="action_New">
