--- a/deb_qview.ui
+++ b/deb_qview.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>637</width>
-    <height>436</height>
+    <width>653</width>
+    <height>494</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -29,24 +29,14 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <widget class="QWidget" name="formLayoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>611</width>
-      <height>351</height>
-     </rect>
-    </property>
-    <layout class="QFormLayout" name="formLayout">
-     <item row="1" column="1">
-      <widget class="QTextBrowser" name="contentviewer"/>
-     </item>
-     <item row="0" column="1">
-      <widget class="QTreeView" name="treeView"/>
-     </item>
-    </layout>
-   </widget>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QTreeView" name="treeView"/>
+    </item>
+    <item row="0" column="1">
+     <widget class="QTextBrowser" name="contentviewer"/>
+    </item>
+   </layout>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QMenuBar" name="menuBar">
@@ -54,7 +44,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>637</width>
+     <width>653</width>
      <height>20</height>
     </rect>
    </property>
