Add licence texts

--- a/aboutdialog.ui
+++ b/aboutdialog.ui
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
+<comment>
+    This package is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see http://www.gnu.org/licenses/.
+</comment>
  <class>AboutDialog</class>
  <widget class="QDialog" name="AboutDialog">
   <property name="geometry">
@@ -37,6 +51,20 @@
    </property>
    <property name="text">
     <string>Qt viewer for the contents of a .deb file</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>150</y>
+     <width>381</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Copyright 2006-2008 Neil Williams &lt;linux@codehelp.co.uk&gt;,
+1994,1995 Ian Jackson &lt;ian@chiark.greenend.org.uk&gt;</string>
    </property>
   </widget>
   <action name="action_Close">
